--- a/client/src/components/Playbill/playbill.css
+++ b/client/src/components/Playbill/playbill.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600, 600i');
 html, body {
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 body {
     background: #112940;
